Fix alerts container being too high

--- a/src/styles/alerts.css
+++ b/src/styles/alerts.css
@@ -3,6 +3,5 @@
   top: 0;
   right: 0;
   z-index: 5;
-  height: 50%;
   width: 30%;
 }
